syntax = "proto3";


option java_package = "uk.co.rd.cloudsync";
option java_outer_classname = "SyncEventsProtos";


enum EventType {
   NEW_SYNC_TIMELINE  						= 0; 
   DEL_SYNC_TIMELINE       					= 1;
   TL_STATE_CHANGE   						= 2;     
   TL_NODE_DISPERSION_EXCEEDED 				= 3; 
}
  


message Header{
	EventType eventType 					= 1;
	string sessionId 						= 2;
	string senderId 						= 3;
	string version 							= 4;
	string eventId 							= 5;
}

message SyncEvent{
	Header header							= 1;
	bytes body								= 2;
}


message PresentationTimestamp
{
	double contentTime 						= 1;
	double wallClockTime 					= 2;
	double speed 							= 3;
	double dispersion      					= 4;
}

message CorrelationTimestamp
{
	PresentationTimestamp actual			= 1;
	PresentationTimestamp earliest			= 2;
	PresentationTimestamp latest			= 3;
}

message NewSyncTLEvent{
	string providerId		 				= 1;
	string timelineId 						= 2;
	string timelineType 					= 3;
	string contentId 						= 4;
	int32 frequency 						= 5;
	string channel 							= 6;
	bool useForSessionSync 					= 7;
	bool writable 							= 8;
	PresentationTimestamp timestamp			= 9;
}


message DelSyncTLEvent{
	string timelineId 						= 1;
	string providerId		 				= 2;
	string timelineType 					= 3;
	string contentId 						= 4;
}


message TimelineStateChange{
	string sourceId		 					= 1;
	string contentId 						= 2;
	string timelineId 						= 3;
	string timelineType 					= 4;
	PresentationTimestamp previous			= 5;
	PresentationTimestamp actual			= 6;
	PresentationTimestamp earliest			= 7;
	PresentationTimestamp latest			= 8;
}
